--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'\n"
+    "web_address = 'vandelay.com' # 'www.vandelay.com'\n",
+    "web\n"
    ]
   },
   {
