Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
    "outputs": [],
    "source": [
     "web_address = 'vandelay.com' # 'www.vandelay.com'\n",
-    "web\n"
+    "web_address += 'www.' +\n"
    ]
   },
   {
