--- a/index.ipynb
+++ b/index.ipynb
@@ -222,23 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-68180dd98465>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-68180dd98465>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    web_address += 'www.' +\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "web_address = 'vandelay.com' # 'www.vandelay.com'\n",
-    "web_address  'www.' +\n",
+    "web_address = 'www.' + web_address\n",
     "\n"
    ]
   },
