--- a/index.ipynb
+++ b/index.ipynb
@@ -257,14 +257,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7285553334\n"
+     ]
+    }
+   ],
    "source": [
     "phone_number = \"7285553334\" # 728\n",
-    "phone_number"
+    "phone_number[:3]\n",
+    "print(phone_number)"
    ]
   },
   {
