Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
    ],
    "source": [
     "phone_number = \"7285553334\" # 728\n",
-    "phone_number[:3]\n",
+    "area_codephone_number[:3]\n",
     "print(phone_number)"
    ]
   },
