Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,21 +257,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7285553334\n"
+      "728\n"
      ]
     }
    ],
    "source": [
     "phone_number = \"7285553334\" # 728\n",
-    "area_codephone_number[:3]\n",
-    "print(phone_number)"
+    "area_code = phone_number[:3]\n",
+    "print(area_code)"
    ]
   },
   {
